# backend

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md
infra/: docker-compose.local.yml  docker-compose.production.yml  nginx.conf
poetry-sagaart/: Dockerfile  pyproject.toml
poetry-sagaart/analytics/: Paintings_v2.py  models.py  urls.py  views.py
poetry-sagaart/api/: serializers.py  urls.py
poetry-sagaart/artist/: models.py  serializers.py  urls.py  views.py
poetry-sagaart/artist/migrations/: 0001_initial.py  0002_initial.py
poetry-sagaart/artshop/: models.py  validators.py
poetry-sagaart/artshop/migrations/: 0001_initial.py  0002_initial.py
poetry-sagaart/sagaart/: asgi.py  settings.py  urls.py  wsgi.py
poetry-sagaart/users/: models.py  utils.py  validators.py
poetry-sagaart/users/api/: permissions.py  serializers.py  urls.py  views.py
poetry-sagaart/users/migrations/: 0001_initial.py
